<resources>
    <string name="app_name">Calculator</string>
    <string name="Percent">%</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Pembagian">÷</string>
    <string name="Pengurangan">-</string>
    <string name="Perkalian">X</string>
    <string name="Penjumlahan">+</string>
    <string name="_0">0</string>
    <string name="Delete">Delete</string>
    <string name="Answer">Answer</string>
    <string name="InputAngka">Input Angka</string>
    <string name="Hasil_Angka">Hasil Angka</string>
    <string name="Decimal">.</string>
</resources>