<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8DCCB"
    tools:context="org.example.project3.MainActivity">

    <EditText
        android:id="@+id/tvInputAngka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:hint="@string/InputAngka" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDelete"
                android:text="@string/Delete"
                style="@style/ButtonFuncAddStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClear"
                style="@style/ButtonFuncAddStyle"
                android:text="Clear"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnswer"
                style="@style/ButtonFuncAddStyle"
                android:text="@string/Answer" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:text="@string/_1"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:text="@string/_2"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:text="@string/_3"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDiv"
                android:text="@string/Pembagian"
                style="@style/ButtonFuncStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:text="@string/_4"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:text="@string/_5"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:text="@string/_6"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMin"
                android:text="@string/Pengurangan"
                style="@style/ButtonFuncStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:text="@string/_7"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:text="@string/_8"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                android:text="@string/_9"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMultiplication"
                android:text="@string/Perkalian"
                style="@style/ButtonFuncStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDecimal"
                android:text="@string/Decimal"
                style="@style/ButtonFuncStyle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button0"
                android:text="@string/_0"
                style="@style/ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPercent"
                android:text="@string/Percent"
                style="@style/ButtonFuncStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPlus"
                android:text="@string/Penjumlahan"
                style="@style/ButtonFuncStyle"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>